--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  background: #2d2e36;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img {
+  width: 100%;
+  border-radius: 0.6rem;
+}
+
+.container {
+  background: #383a45;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 0.4rem;
+  max-width: 270px;
+}
+
+p.title {
+  color: white;
+  font-size: 1.2rem;
+  line-height: 119.7%;
+}
+
+p.description {
+  color: #8d91a6;
+  font-size: 0.8rem;
+}
+
+.link {
+  width: 1rem;
+}
+
+@media screen and (min-width: 550px) {
+  .container {
+    display: flex;
+    max-width: 600px;
+  }
+  .photo {
+    margin-right: 1rem;
+  }
+}
+@media screen and (min-width: 950px) {
+  html {
+    font-size: 20px;
+  }
 }
